# ShaderCompiler

./: CMakeLists.txt  LICENSE  build.py  main.cpp  notes.md  readme.md  test.hlsl
include/: compiler.h
shaders/: bindless.h  brdf.hlsli  light_types.h  lighting.hlsli  lighting_cb.h  rt_bindless.hlsl  scene.hlsli  scene_material.hlsli  test.hlsl
src/: compiler.cpp
test/: main.cpp
